content/nomad/v0.11.x/content/docs/commands/alloc/logs.mdx
---
layout: docs
page_title: 'Commands: alloc logs'
sidebar_title: logs
description: |
  Stream the logs of a task.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-10T11:41:43-05:00
last_modified: 2025-10-10T11:41:43-05:00
# END AUTO GENERATED METADATA
---

# Command: alloc logs

**Alias: `nomad logs`**

The `alloc logs` command displays the log of a given task.

## Usage

```plaintext
nomad alloc logs [options] <allocation> <task>
```

This command streams the logs of the given task in the allocation. If the
allocation is only running a single task, the task name can be omitted.
Optionally, the `-job` option may be used in which case a random allocation from
the given job will be chosen.

## General Options

@include 'general_options.mdx'

## Logs Options

- `-stderr`: Display stderr logs.

- `-verbose`: Display verbose output.

- `-job`: Use a random allocation from the specified job, preferring a running
  allocation.

- `-f`: Causes the output to not stop when the end of the logs are reached, but
  rather to wait for additional output.

- `-tail`: Show the logs contents with offsets relative to the end of the logs.
  If no offset is given, -n is defaulted to 10.

- `-n`: Sets the tail location in best-efforted number of lines relative to the
  end of the logs.

- `-c`: Sets the tail location in number of bytes relative to the end of the
  logs.

## Examples

```shell-session
$ nomad alloc logs eb17e557 redis
foobar
baz
bam

$ nomad alloc logs -stderr eb17e557 redis
[ERR]: foo
[ERR]: bar

$ nomad alloc logs -job example
[ERR]: foo
[ERR]: bar

$ nomad alloc logs -tail -n 2 eb17e557 redis
foobar
baz

$ nomad alloc logs -tail -f -n 3 eb17e557 redis
foobar
baz
bam
<blocking>
```

## Using Job ID instead of Allocation ID

Setting the `-job` flag causes a random allocation of the specified job to be
selected. Nomad will prefer to select a running allocation ID for the job, but
if no running allocations for the job are found, Nomad will use a dead
allocation.

```plaintext
nomad alloc logs -job <job-id> <task>
```

Choosing a specific allocation is useful for debugging issues with a specific
instance of a service. For other operations using the `-job` flag may be more
convenient than looking up an allocation ID to use.
